# object

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_WALKTHROUGH.md  CONSTITUTION.md  Cargo.toml  GEMINI.md  INSTRUCTIONS.md  LICENSE  POLICY.md  PROTOCOL.md  README.md  USER_GUIDE.md  flake.nix  justfile
api/openapi/: object-openapi.json
crates/object-api/: Cargo.toml
crates/object-api/src/: lib.rs
crates/object-server/: Cargo.toml
crates/object-server/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  openapi-types.ts  types.ts
